--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#home" class="nav__link active-link">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#program" class="nav__link">Programa</a>
+                        <a href="#program" class="nav__link">Programas</a>
                     </li>
                     <li class="nav__item">
                         <a href="#choose" class="nav__link">Sobre nós</a>
